--- a/components/SocialLink.module.css
+++ b/components/SocialLink.module.css
@@ -1,11 +1,23 @@
 .imageContainer{
+	display: inline-block;
 	border-radius: 50%;
-	box-sizing: border-box;
-	display:inline-block;
-	height:200px;
-	width: 200px;
+	overflow: hidden;
+	background-color: gray;
+	height:20px;
+	width: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: height 0.2s, width 0.2s, background-color 0.2s;
+}
+.imageContainer.hover{
+	background-color: white;
+	height:30px;
+	width: 30px;
+}
+.imageContainer:hover{
+	cursor: pointer;
 }
 .image{
-	border-radius: 50%;
-	display:inline-block;
+	/* border-radius: 50%; */
 }
