--- a/components/ImageLink.module.css
+++ b/components/ImageLink.module.css
@@ -1,10 +1,16 @@
+.root {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 .imageContainer {
 	display: inline-block;
 	border-radius: 50%;
 	overflow: hidden;
-	background-color: white;
-	height: 80%;
-	width: 80%;
+	background-color: transparent;
+	height: 85%;
+	width: 85%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -42,9 +48,13 @@
 .hover .imageColored {
 	filter: brightness(100%);
 }
+.labelContainer {
+	display: flex;
+	justify-content: center;
+	position: relative;
+}
 .label {
 	margin-top: 5px;
-	font-size: 26px;
 	opacity: 0;
 	transition: opacity 0.4s;
 	text-align: center;
