added main page sections

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap");
+html{
+	scroll-behavior: smooth;
+}
 html,
 body {
   height: 100%;
