--- a/components/LandingPageInitial.module.css
+++ b/components/LandingPageInitial.module.css
@@ -16,6 +16,7 @@
 	align-items: center;
 	justify-content: center;
 	position: relative;
+	background-image: linear-gradient(#dbdbdb, #ebebeb 25%, white 90%);
 }
 .landingPageIntro {
 	margin-right: 40%;
@@ -23,25 +24,26 @@
 	display: flex;
 	flex-direction: row;
 	font-weight: bold;
+	text-shadow: 0 0 2px #000000;
 }
 .landingPageIntro span {
 	letter-spacing: -1.5rem;
 }
 #firstP {
 	animation-name: fade;
-	animation-delay: 0.5s;
+	animation-delay: 0s;
 	animation-duration: 8.3s;
 	animation-iteration-count: infinite;
 }
 #secondP {
 	animation-name: fade;
-	animation-delay: 1s;
+	animation-delay: .5s;
 	animation-duration: 8.3s;
 	animation-iteration-count: infinite;
 }
 #thirdP {
 	animation-name: fade;
-	animation-delay: 1.5s;
+	animation-delay: 1s;
 	animation-duration: 8.3s;
 	animation-iteration-count: infinite;
 }
@@ -57,7 +59,7 @@
 	position: absolute;
 	bottom: 50px;
 	background-color: transparent;
-	transition: background-color 0.65s, color 0.8s;
+	transition: background-color 0.5s, color 0.8s;
 }
 .scrollToAboutMe::before {
 	border-radius: 20px;
@@ -67,7 +69,7 @@
 	content: '';
 	opacity: 0;
 	box-shadow: -1px 3px 10px 4px rgba(0, 0, 0, 0.5);
-	transition: opacity 1s;
+	transition: opacity 500ms;
 }
 
 .scrollToAboutMe:hover {
