--- a/components/AboutMe.module.css
+++ b/components/AboutMe.module.css
@@ -1,9 +1,54 @@
-.title{
-
+.root {
+	margin: 0 50px;
+	margin-top: 100px;
+	padding-top: 75px;
+	margin-bottom: 50px;
+	/* height: calc(max(100vh, 500px)); */
 }
-.description{
-
+.aboutMe {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
-.socialsContainer{
-	
+.personalPhotoContainer {
+	height: 22rem;
+	width: 22rem;
+	box-sizing: border-box;
+	border-radius: 25%;
+	overflow: hidden;
+	border: 1px solid black;
+	box-shadow: 0 0 8px 4px rgb(65, 65, 65);
+}
+.personalPhotoContainer img {
+	transform: scale(1.3);
+	transition: transform 250ms;
+}
+.personalPhotoContainer:hover img {
+	transform: scale(1.1);
+}
+.infoContainer {
+	margin-left: 5rem;
+	display: flex;
+	flex-direction: column;
+}
+.title {
+	font-size: 5rem;
+	margin-bottom: 25px;
+}
+.descriptionContainer {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 20px;
+}
+.description {
+	font-size: 2rem;
+	max-width: 65rem;
+	line-height: 2.45rem;
+	margin-bottom: 20px;
+}
+.socialsContainer {
+	margin-top: auto;
+	display: flex;
+	flex-direction: row;
+	gap: 15px;
 }
