--- a/components/ImageLink.module.css
+++ b/components/ImageLink.module.css
@@ -56,11 +56,19 @@
 .label {
 	margin-top: 5px;
 	opacity: 0;
-	transition: opacity 0.4s;
+	transition: 0.4s;
 	text-align: center;
-	/* align-items: center; */
+	visibility: hidden;
+	white-space: nowrap;
 	position: absolute;
+}
+.label.black {
+	background-color: black;
+	padding: 10px 15px;
+	border-radius: 10px;
+	color: white;
 }
 .label.show {
 	opacity: 1;
+	visibility: visible;
 }
