--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,10 +2,10 @@
 html{
 	scroll-behavior: smooth;
 }
-html,
 body {
   height: 100%;
-  font-family: 'Roboto Slab', serif; }
-
+  font-family: 'Roboto Slab', serif; 
+  background-image: linear-gradient(#dbdbdb, #ebebeb 35%, white 90%);
+}
 a {
   text-decoration: none; }
