--- a/components/AboutMe.module.css
+++ b/components/AboutMe.module.css
@@ -3,7 +3,9 @@
 	margin-left: 100px;
 	min-height: 100vh;
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	position: relative;
 }
 .aboutMe {
 	display: flex;
