--- a/components/AboutMe.module.css
+++ b/components/AboutMe.module.css
@@ -1,6 +1,7 @@
 .root {
-	margin: 100px 0;
-	margin-left: 100px;
+	margin: 100px 100px;
+	margin-bottom: 0;
+	padding-bottom: 150px;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -61,4 +62,47 @@
 	display: flex;
 	flex-direction: row;
 	gap: 15px;
+}
+@media only screen and (max-width: 1650px) {
+	.root {
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+	.aboutMe {
+		flex-direction: column;
+	}
+	.personalPhotoContainer {
+		margin-bottom: 4rem;
+	}
+}
+@media only screen and (max-width: 1000px) {
+	.root {
+		padding-top: 50px;
+	}
+	.personalPhotoContainer {
+		height: 50vw;
+		width: 50vw;
+	}
+	.title {
+		font-size: 3rem;
+	}
+	.description {
+		font-size: 1.8rem;
+		line-height: 2.3rem;
+	}
+	.infoContainer {
+		margin: 0 25px;
+	}
+	.socialsContainer {
+		gap: 5px;
+	}
+}
+@media only screen and (max-width: 500px) {
+	.title {
+		font-size: 2.2rem;
+	}
+	.description {
+		font-size: 1.4rem;
+		line-height: 1.7rem;
+	}
 }
