--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -24,3 +24,13 @@
 	cursor: pointer;
 	text-decoration-color: rgb(255, 255, 255);
 }
+@media only screen and (max-width: 1000px) {
+	.list li {
+		font-size: 10vw;
+		margin-left: 15px;
+	}
+	.root {
+		width: 100vw;
+		display: none;
+	}
+}
