--- a/components/SectionButton.module.css
+++ b/components/SectionButton.module.css
@@ -1,6 +1,7 @@
 .root {
 	position: absolute;
-	width: 100vw;
+	width: 100%;
+	left: 0;
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
@@ -55,4 +56,21 @@
 .button:hover .dropdownContainer {
 	filter: brightness(0) invert(1);
 	transform: rotate(0deg) translateX(-5px);
+}
+@media only screen and (max-width: 1250px) {
+	.dropdownContainer {
+		transform: rotate(0);
+		height: 1.4rem;
+		width: 1.4rem;
+	}
+}
+@media only screen and (max-width: 1000px) {
+	.dropdownContainer {
+		transform: rotate(0);
+		height: 1.2rem;
+		width: 1.2rem;
+	}
+	.button {
+		font-size: 2.6rem;
+	}
 }
