--- a/public/style/main.css
+++ b/public/style/main.css
@@ -4,10 +4,18 @@ html {
 body {
 	height: 100%;
 	background-image: linear-gradient(#dbdbdb, #ebebeb 45%, white 90%);
+	min-width: 350px;
+	overflow-x: hidden;
 }
 body * {
 	font-family: 'Roboto Slab', serif;
+	box-sizing: border-box;
 }
 a {
 	text-decoration: none;
+}
+@media only screen and (max-width: 1000px) {
+	body {
+		width: 100%;
+	}
 }
