--- a/components/ProjectsList.module.css
+++ b/components/ProjectsList.module.css
@@ -31,6 +31,7 @@
 @media only screen and (max-width: 1150px) {
 	.projectsContainer {
 		grid-template-columns: auto;
+		row-gap: 10px;
 	}
 	.title {
 		padding-top: 50px;
