--- a/components/Project.module.css
+++ b/components/Project.module.css
@@ -163,14 +163,19 @@
 		padding: 5px 5px;
 	}
 }
+@media only screen and (max-width: 1150px) {
+	.root {
+		margin-bottom: 20px;
+	}
+}
 @media only screen and (max-width: 1700px) {
 	.root {
 		margin-bottom: 30px;
 	}
 }
-@media only screen and (max-width: 1150px) {
-	.root {
-		margin-bottom: 20px;
+@media only screen and (min-width: 1150px) {
+	.title {
+		line-height: 2.8rem;
 	}
 }
 @media only screen and (min-width: 2540px) {
@@ -189,6 +194,7 @@
 	}
 	.title {
 		font-size: 3.5rem;
+		line-height: 4rem;
 	}
 	.titleContainer {
 		margin-bottom: 40px;
