--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -17,7 +17,7 @@
 	margin-left: 30px;
 	font-size: 2rem;
 	text-transform: capitalize;
-	font-variant: small-caps;
+	/* font-variant: small-caps; */
 	font-weight: bold;
 	color: white;
 	text-decoration: underline;
