--- a/components/LandingPageInitial.module.css
+++ b/components/LandingPageInitial.module.css
@@ -80,6 +80,12 @@
 	animation-duration: 3.5s;
 	animation-iteration-count: infinite;
 }
+.showMobile {
+	display: none;
+}
+.hideMobile {
+	display: auto;
+}
 @media only screen and (max-width: 2600px) {
 	.landingPageIntro {
 		font-size: 15rem;
@@ -124,5 +130,13 @@
 		margin-left: 1rem;
 		height: 5.2rem;
 		width: 0.15rem;
+	}
+}
+@media only screen and (max-width: 500px) {
+	.showMobile {
+		display: auto;
+	}
+	.hideMobile {
+		display: none;
 	}
 }
