--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -1,19 +1,19 @@
 .root {
 	display: inline-grid;
 	grid-template-columns: 300px repeat(auto-fit, 200px);
-	padding: 10px;
-	margin: 10px;
-	margin-bottom: 50px;
-	border-radius: 30px;
+	padding: 0.625rem;
+	margin: 0.625rem;
+	margin-bottom: 3.125rem;
+	border-radius: 1.875rem;
 	box-sizing: border-box;
-	max-width: 550px;
+	max-width: 34.375rem;
 	transition: background-color 0.45s;
 	position: relative;
 }
 .root::before,
 .root::after {
 	transition: opacity 0.5s;
-	border-radius: 30px;
+	border-radius: 1.875rem;
 	content: '';
 	position: absolute;
 	height: 100%;
@@ -37,8 +37,8 @@
 .titleContainer {
 	display: flex;
 	align-items: center;
-	margin: 20px 5px;
-	margin-left: 10px;
+	margin: 1.25rem 0.3125rem;
+	margin-left: 0.625rem;
 }
 .title {
 	font-size: 2.6rem;
@@ -52,23 +52,23 @@
 	text-decoration-color: rgba(0, 0, 0, 1);
 }
 .contentContainer {
-	margin: 0 20px;
+	margin: 0 1.25rem;
 	grid-column: span 2;
 }
 .description {
 	font-size: 1.4rem;
-	line-height: 24px;
-	margin-bottom: 25px;
+	line-height: 1.5rem;
+	margin-bottom: 1.5625rem;
 }
 .technologiesSection {
 	display: flex;
 	flex-direction: column;
-	gap: 5px;
+	gap: 0.3125rem;
 }
 .technologiesHeader {
 	font-size: 1.1rem;
 	font-weight: bold;
-	margin-bottom: 5px;
+	margin-bottom: 0.3125rem;
 }
 .technologiesContainer {
 	display: flex;
@@ -83,11 +83,11 @@
 }
 .repoLinkContainer,
 .liveLinkContainer {
-	margin: 0 10px;
+	margin: 0 0.625rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-bottom: 5px;
+	margin-bottom: 0.3125rem;
 }
 .repoLink,
 .liveLink {
@@ -98,8 +98,8 @@
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
-	padding: 10px 12px;
-	border-radius: 20px;
+	padding: 0.625rem 0.75rem;
+	border-radius: 1.25rem;
 	background-color: transparent;
 	font-size: 1.2rem;
 	transition: background-color 450ms, color 600ms, width 450ms;
@@ -122,7 +122,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-right: 8px;
+	margin-right: 0.5rem;
 	filter: brightness(0) invert(0);
 	transition: 600ms;
 }
@@ -145,7 +145,7 @@
 	.root {
 		grid-template-columns: auto;
 		width: 92vw;
-		margin-bottom: 15px;
+		margin-bottom: 0.9375rem;
 	}
 	.contentContainer {
 		grid-column: span 1;
@@ -158,19 +158,27 @@
 	.liveLink,
 	.repoLink {
 		width: auto;
+		justify-content: flex-start;
 		font-weight: bold;
 		font-size: 1.4rem;
-		padding: 5px 5px;
+		padding: 7px 25px 7px 20px;
+	}
+	.liveLink:hover,
+	.repoLink:hover {
+		width: auto;
+	}
+	.linkContainer {
+		margin-bottom: 15px;
 	}
 }
 @media only screen and (max-width: 1150px) {
 	.root {
-		margin-bottom: 20px;
+		margin-bottom: 1.25rem;
 	}
 }
 @media only screen and (max-width: 1700px) {
 	.root {
-		margin-bottom: 30px;
+		margin-bottom: 1.875rem;
 	}
 }
 @media only screen and (min-width: 1150px) {
@@ -197,7 +205,7 @@
 		line-height: 4rem;
 	}
 	.titleContainer {
-		margin-bottom: 40px;
+		margin-bottom: 2.5rem;
 	}
 	.description {
 		font-size: 1.9rem;
@@ -205,6 +213,6 @@
 	}
 	.technologiesHeader {
 		font-size: 1.9rem;
-		margin-bottom: 10px;
+		margin-bottom: 0.625rem;
 	}
 }
