--- a/components/LandingPageInitial.module.scss
+++ b/components/LandingPageInitial.module.scss
@@ -2,17 +2,6 @@
 	0% {
 		opacity: 1;
 	}
-	50% {
-		opacity: 0;
-	}
-	80% {
-		opacity: 1;
-	}
-}
-@keyframes fade2 {
-	0% {
-		opacity: 1;
-	}
 	45% {
 		opacity: 0;
 	}
@@ -27,7 +16,7 @@
 	height: calc(max(100vh, 600px));
 	display: flex;
 	flex-direction: column;
-	/* align-items: center; */
+	background-image: linear-gradient(#cccccc, #ebebeb 35%, #e0e0e0 90%);
 	justify-content: center;
 	position: relative;
 }
@@ -46,24 +35,6 @@
 .landingPageIntro span {
 	letter-spacing: -1.5rem;
 }
-#firstP {
-	animation-name: fade;
-	animation-delay: 0s;
-	animation-duration: 6.3s;
-	animation-iteration-count: infinite;
-}
-#secondP {
-	animation-name: fade;
-	animation-delay: 0.5s;
-	animation-duration: 6.3s;
-	animation-iteration-count: infinite;
-}
-#thirdP {
-	animation-name: fade;
-	animation-delay: 1s;
-	animation-duration: 6.3s;
-	animation-iteration-count: infinite;
-}
 #spacer {
 	display: flex;
 	align-items: center;
@@ -76,7 +47,7 @@
 	background-color: black;
 }
 #spacer::before {
-	animation-name: fade2;
+	animation-name: fade;
 	animation-duration: 3.5s;
 	animation-iteration-count: infinite;
 }
