--- a/components/ProjectsList.module.scss
+++ b/components/ProjectsList.module.scss
@@ -51,6 +51,14 @@
 		margin-bottom: 30px;
 	}
 }
+@media only screen and (max-width: 1000px) {
+	.root {
+		padding-top: 0;
+	}
+	.title {
+		padding-top: 35px;
+	}
+}
 @media only screen and (min-width: 2540px) {
 	.title {
 		font-size: 7rem;
