--- a/components/ImageLink.module.scss
+++ b/components/ImageLink.module.scss
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	cursor: default;
 }
 .imageContainer {
 	display: inline-block;
@@ -20,8 +21,6 @@
 	background-color: black;
 	height: 100%;
 	width: 100%;
-}
-.imageContainer:hover {
 	cursor: pointer;
 }
 .image {
