--- a/components/AboutMe.module.scss
+++ b/components/AboutMe.module.scss
@@ -1,11 +1,12 @@
 .root {
-	background-image: linear-gradient(
-		#e0e0e0,
-		#e4e4e4 40%,
-		#e4e4e4 60%,
-		#e0e0e0 100%
-	);
-	padding: 150px 100px;
+	// background-image: linear-gradient(
+	// 	#e0e0e0,
+	// 	#e4e4e4 40%,
+	// 	#e4e4e4 60%,
+	// 	#e0e0e0 100%
+	// );
+	background-color: black;
+	padding: 200px 100px;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -13,6 +14,7 @@
 	position: relative;
 }
 .aboutMe {
+	color:white;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -40,7 +42,7 @@
 }
 .title {
 	font-size: 5rem;
-	margin-bottom: 25px;
+	margin-bottom: 25px
 }
 .descriptionContainer {
 	display: flex;
@@ -54,12 +56,12 @@
 	margin-bottom: 20px;
 }
 .description a {
-	color: black;
+	color: white;
 	text-decoration: underline;
 	transition: 350ms;
 }
 .description a:hover {
-	color: #0038a1;
+	color: #006bb3;
 }
 .socialsContainer {
 	margin-top: auto;
