--- a/components/NavBar.module.scss
+++ b/components/NavBar.module.scss
@@ -1,13 +1,13 @@
 .root {
 	position: fixed;
 	width: 100%;
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.7);
 	z-index: 3;
 	backdrop-filter: blur(10px);
 	top: 0;
 }
 .list {
-	padding: 15px 0;
+	padding: 10px 0;
 	display: flex;
 	flex-direction: row;
 	align-content: center;
@@ -22,7 +22,7 @@
 	transition: 0.5s;
 }
 .sectionHeader {
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.45);
 	padding: 10px 20px;
 	width: 100%;
 	border-radius: 10px;
@@ -76,9 +76,6 @@
 	transition: 0.35s;
 }
 .navItem.active {
-	.sectionHeader {
-		border: 2px solid white;
-	}
 	.sectionList {
 		background-color: white;
 	}
