--- a/components/SectionButton.module.scss
+++ b/components/SectionButton.module.scss
@@ -3,12 +3,14 @@
 	width: 100%;
 	left: 0;
 	display: flex;
-	justify-content: center;
-	align-items: flex-end;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
 	bottom: calc(min(20%, 50px));
 	margin-top: 15px;
 }
 .button {
+	color: white;
 	padding: 20px;
 	font-size: 4rem;
 	border-radius: 20px;
@@ -17,45 +19,50 @@
 	justify-content: center;
 	position: absolute;
 	background-color: transparent;
-	transition: background-color 0.5s, color 0.8s;
-}
-.button::before {
-	border-radius: 20px;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	content: '';
-	opacity: 0;
-	box-shadow: -1px 3px 10px 4px rgba(0, 0, 0, 0.5);
-	transition: opacity 500ms;
-}
-
-.button:hover {
-	cursor: pointer;
-	background-color: black;
-	color: white;
-}
-.button:hover::before {
-	opacity: 1;
-}
-.button p {
-	margin-right: 20px;
-}
-.dropdownContainer {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	height: 1.7rem;
-	width: 1.7rem;
-	margin-right: 5px;
-	filter: brightness(0) invert(0);
-	transform: rotate(-90deg) translateX(0);
-	transition: 0.8s;
-}
-.button:hover .dropdownContainer {
-	filter: brightness(0) invert(1);
-	transform: rotate(0deg) translateX(-5px);
+	box-shadow: 0 0 0 0 transparent;
+	box-sizing: border-box;
+	position: relative;
+	text-shadow: 0 0 3px rgba(255, 255, 255, 0);
+	transition: background-color 0.5s, color 0.8s, text-shadow 0.2s;
+	.dropdownContainer {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		height: 1.7rem;
+		width: 1.7rem;
+		margin-right: 5px;
+		filter: brightness(0) invert(1);
+		transform: rotate(-90deg);
+		transition: 0.8s;
+	}
+	&::before {
+		border-radius: 20px;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		content: '';
+		opacity: 1;
+		box-shadow: 0 0 10px 4px rgba(255, 31, 143, 0.5);
+		transition: opacity 500ms;
+		opacity: 0;
+	}
+	&:hover {
+		background-color: rgba(255, 31, 143, 0.8);
+		stroke: black;
+		text-shadow: 0 0 3px white;
+		cursor: pointer;
+		&::before {
+			opacity: 1;
+		}
+		.dropdownContainer {
+			filter: brightness(0) invert(1);
+			transform: rotate(0deg);
+		}
+	}
+	p {
+		margin-right: 20px;
+	}
 }
 @media only screen and (max-width: 1250px) {
 	.dropdownContainer {
@@ -66,7 +73,6 @@
 }
 @media only screen and (max-width: 1000px) {
 	.dropdownContainer {
-		transform: rotate(0);
 		height: 1.2rem;
 		width: 1.2rem;
 	}
