--- a/components/AboutMe.module.scss
+++ b/components/AboutMe.module.scss
@@ -1,10 +1,4 @@
 .root {
-	// background-image: linear-gradient(
-	// 	#e0e0e0,
-	// 	#e4e4e4 40%,
-	// 	#e4e4e4 60%,
-	// 	#e0e0e0 100%
-	// );
 	background-color: black;
 	padding: 200px 100px;
 	min-height: 100vh;
@@ -14,7 +8,7 @@
 	position: relative;
 }
 .aboutMe {
-	color:white;
+	color: white;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -28,12 +22,14 @@
 	border: 1px solid black;
 	box-shadow: 0 0 8px 4px rgb(65, 65, 65);
 }
-.personalPhotoContainer img {
-	transform: scale(1.3);
-	transition: transform 400ms;
-}
-.personalPhotoContainer:hover img {
-	transform: scale(1.1);
+.personalPhotoContainer {
+	img {
+		transform: scale(1.3);
+		transition: transform 400ms;
+	}
+	&:hover img {
+		transform: scale(1.08);
+	}
 }
 .infoContainer {
 	margin-left: 5rem;
@@ -42,7 +38,7 @@
 }
 .title {
 	font-size: 5rem;
-	margin-bottom: 25px
+	margin-bottom: 25px;
 }
 .descriptionContainer {
 	display: flex;
@@ -54,14 +50,15 @@
 	max-width: 65rem;
 	line-height: 2.45rem;
 	margin-bottom: 20px;
-}
-.description a {
-	color: white;
-	text-decoration: underline;
-	transition: 350ms;
-}
-.description a:hover {
-	color: #006bb3;
+	a {
+		color: white;
+		text-decoration: underline;
+		transition: 350ms;
+		&:hover {
+			color: rgb(255, 31, 143);
+			text-shadow: 0 0 1px rgb(255, 31, 143);
+		}
+	}
 }
 .socialsContainer {
 	margin-top: auto;
