--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -6,6 +6,7 @@
 	margin-bottom: 3.125rem;
 	border-radius: 1.875rem;
 	border: 0.5px solid white;
+	background-color: rgb(0, 0, 0);
 	box-sizing: border-box;
 	max-width: 34.375rem;
 	position: relative;
@@ -13,7 +14,7 @@
 	transition: 0.5s;
 	&::before,
 	&::after {
-		transition: opacity 0.45s;
+		transition: opacity 0.35s;
 		border-radius: 1.875rem;
 		content: '';
 		position: absolute;
@@ -27,10 +28,10 @@
 	}
 	&::after {
 		opacity: 0;
-		box-shadow: 0 0 4px 6px rgba(255, 255, 255, 0.5);
+		box-shadow: 0 0 3px 3px rgba(255, 255, 255, 0.65);
 	}
 	&:hover {
-		border: 0.5px solid rgb(117, 117, 117);
+		// border: 0.5px solid rgb(255, 31, 143);
 		&::before {
 			opacity: 0;
 		}
